# typstar

./: .gitignore  .stylua.toml  README.md  flake.nix  pyproject.toml
lua/typstar/: anki.lua  autosnippets.lua  config.lua  engine.lua  excalidraw.lua  init.lua  utils.lua
lua/typstar/snippets/: document.lua  letters.lua  markup.lua  math.lua  matrix.lua  visual.lua
python/: obsidian_open.py
res/: excalidraw_template.excalidraw.md  obsidian_open_config_example.json
src/anki/: anki_api.py  config_parser.py  file_handler.py  flashcard.py  main.py  parser.py  typst_compiler.py
